--- a/templates/example1.html
+++ b/templates/example1.html
@@ -8,7 +8,7 @@
   <body style="position: relative; width: 21cm; height: 29.7cm; margin: 0 auto; color: #001028; background: #FFFFFF; font-family: Arial, sans-serif; font-size: 12px; font-family: Arial;">
     <header class="clearfix" style="padding: 10px 0; margin-bottom: 30px;">
       <div id="logo" style="text-align: center; margin-bottom: 10px;" >
-        <img style="height: : 90px;" src="{{ url_for('static', filename='images/logo.png')}}">
+        <img style="height: : 90px;" src="{{ url_for('static', filename='logo_pics/'+salon.logo)}}">
 
       <h1 style="border-top: 1px solid  #5D6975; border-bottom: 1px solid  #5D6975; color: #5D6975; font-size: 2.4em; line-height: 1.4em; font-weight: normal; text-align: center; margin: 0 0 20px 0;  " >INVOICE {{invoiceId}}</h1>
       <div id="company" class="clearfix" style="float: right; text-align: right;" >
@@ -49,7 +49,7 @@
           </tr>
           {% endfor %}
 
-      
+
           <tr>
             <td colspan="4" class="grand total" style="padding: 20px; text-align: right;" >GRAND TOTAL</td>
             <td class="grand total" style="border-top: 1px solid #5D6975; font-size: 1.2em; padding: 20px; text-align: right;" >£{{total}}</td>
